--- a/.gitignore
+++ b/.gitignore
@@ -1,260 +1,17 @@
-/* eslint‑disable max‑lines */
-import { Fee }               from '#src/models/entities/Fees.js';
-import Result                from '#features/shared/result.js';
-import CustomerFees          from '#src/models/CustomerFees.js';
-import BankAccountFee        from '#src/models/BankAccountFee.js';
-import InvestimentAccountFee from '#src/models/InvestimentAccountFee.js';
-import { FeeCase }           from '#src/models/entities/FeeCase.js';
-import { Field }             from '#src/models/entities/Fields.js';
-import numberToCurrency      from '#core/helpers/currency.js';
-import {
-  connectToFeeMgmtDb,
-  executeStoreProcedure,
-} from '#core/data/mssql/index.js';
-
-/* ───────────────── helpers SQL ───────────────── */
-
-async function getPackageData(cifno) {
-  const conn  = await connectToFeeMgmtDb();
-  const [row] = await executeStoreProcedure(conn, 'sp_get_fees_byCIF', { cifno });
-  if (!row) return {};
-
-  return {
-    defaultFeePackageId: row['Default Fee Package Id'] ?? null,
-    branchCity         : row['Branch City']?.trim()          || '',
-    branchState        : row['Branch State']?.trim()         || '',
-    branchType         : row['Branch Type']?.trim()          || '',
-    defaultPackageType : row['Default Package Type']?.trim() || '',
-    feePackage         : row['Default Fee Package']?.trim()  || '',
-  };
+{
+  cifno: "NAA0010",
+  ddaNumber: 17226444,
+  bpsAcctNumber: "20002089",
+  feeType: 6,
+  feeDescription: "SafekeepingCustody",
+  feeCode: "A032",
+  bpsFeeTypeCode: "C",
+  source: "BPS",
+  entity: "SNB/284",
+  feeAmount: 375,
+  isFeesStandard: "Yes",
+  kycMailingStatus: null,
+  feeGroup: 3,
 }
 
-async function getStandardFees(packageId) {
-  const conn = await connectToFeeMgmtDb();
-  const rows = await executeStoreProcedure(
-    conn, 'sp_get_standard_fees_bypackage',
-    { FeePackageId: packageId },
-  );
-  return rows ?? [];
-}
 
-async function getExceptionFees(packageId) {
-  const conn = await connectToFeeMgmtDb();
-  const rows = await executeStoreProcedure(
-    conn, 'sp_get_exception_fees_bypackage',
-    { FeePackageId: packageId },
-  );
-  return rows ?? [];
-}
-
-function getDocumentUrl(id) {
-  const urls = global.environment.scheduleUrls || {};
-  const key  = ({ 1: 'intlPB3', 2: 'uSPBIndividual3', 3: 'uSPBCorporation3' })[id];
-  return key ? urls[key] || '' : '';
-}
-
-/* ───────────── helpers domínio ───────────── */
-
-async function getFeeStandard(filter) {
-  return Fee.find({ $or: filter })
-    .select({ feeType: 1, feeGroups: { name: 1, fields: 1, code: 1 } })
-    .lean();
-}
-
-function findGroup(fee, name) {
-  return fee?.feeGroups?.find((g) => g.name === name);
-}
-
-/* mapa FeeCode → field.code usado nos forms */
-const feeCodeMap = {
-  JH001: 1, JH002: 2, JH010: 3, JH008: 4,     // JHA
-  BPS002: 6, BPS003: 5, BPS004: 7, BPS005: 7, // BPS
-};
-
-/* ---------- Standard Fees ---------- */
-function applyStandardAmounts(mongoFees, stdRows) {
-  /* devolve pequeno índice code→tooltip para Custody */
-  const custodyTooltip = {};
-
-  mongoFees.forEach((fee) => {
-    const stdGrp = findGroup(fee, 'Standard Fees');
-    if (!stdGrp) return;
-
-    stdGrp.fields.forEach((field) => {
-      const row = stdRows.find((r) => parseInt(r.FeeType, 10) === field.code);
-      if (!row) return;
-
-      const amt = Number(row.FeeAmount);
-      field.defaultValue = amt.toString();
-      field.labelValue   = numberToCurrency(amt);
-      field.tooltip      = row.FreqDescription?.trim() || field.tooltip;
-
-      if (field.code === 6) {                          // Custody
-        custodyTooltip[row.FeeCode] = field.tooltip;   // ex.: A021
-      }
-    });
-  });
-
-  return custodyTooltip; // usado depois em Custody Current / Exception
-}
-
-/* ---------- Exception Fees ---------- */
-function applyExceptionAmounts(mongoFees, excRows, custodyToolTips) {
-  const byCode = excRows.reduce((acc, r) => {
-    (acc[r.FeeCode] ??= []).push(r);
-    return acc;
-  }, {});
-
-  mongoFees.forEach((fee) => {
-    const excGrp = findGroup(fee, 'Exception Request');
-    if (!excGrp) return;
-
-    excGrp.fields.forEach((field) => {
-      const code = Object.entries(feeCodeMap)
-        .find(([, c]) => c === field.code)?.[0];
-      const rows = code ? byCode[code] : null;
-      if (!rows?.length) return;
-
-      field.exceptionOptions = rows.map((r) => ({
-        value  : Number(r.Amount).toString(),
-        text   : field.code === 6       // Custody usa descrição longa
-          ? (custodyToolTips[r.FeeCode] || r.FreqDescription || r.Amount)
-          : numberToCurrency(r.Amount),
-        visible: true,
-        retired: false,
-      }));
-
-      field.defaultValue = '';
-      field.labelValue   = '';
-    });
-  });
-}
-
-/* ---------- Custody – preenche Client Current ---------- */
-function fillCustodyCurrentLabels(
-  mongoFees, custodyToolTips, sqlRows, custAccounts,
-) {
-  mongoFees.forEach((fee) => {
-    const curGrp = findGroup(fee, 'Client Current Fees');
-    if (!curGrp) return;
-
-    curGrp.fields.forEach((f) => {
-      if (f.code !== 6) return;                 // só Custody
-
-      /* tenta 1) valor numérico vindo do customerAccount */
-      const acc = custAccounts.find(
-        (a) => a.feeType === 6
-          && String(a.bpsAcctNumber || '') === String(fee.accountNumber || ''),
-      );
-
-      if (acc?.feeAmount) {
-        f.defaultValue = acc.feeAmount.toString();      // 375
-        f.labelValue   = numberToCurrency(acc.feeAmount);
-        f.tooltip      = f.labelValue;
-        return;
-      }
-
-      /* 2) tenta mapear código A0xx → descrição tooltip */
-      const desc = custodyToolTips[f.defaultValue];
-      if (desc) {
-        f.labelValue = desc;
-        f.tooltip    = desc;
-      }
-    });
-  });
-}
-
-/* ---------- Exception labels fallback ---------- */
-function syncExceptionLabels(feesArr) {
-  feesArr.forEach((fee) => {
-    const exc = findGroup(fee, 'Exception Request');
-    if (!exc) return;
-    exc.fields.forEach((f) => {
-      const val = f.defaultValue;
-      f.labelValue = val ? numberToCurrency(Number(val)) : '$0.00';
-    });
-  });
-}
-
-/* ───────────── Use‑case ───────────── */
-
-export default class FeeGetByCifUseCase {
-  async execute({ customerAccount }) {
-    /* 1) modelo Mongo */
-    const fees = await getFeeStandard([
-      { feeType: 'Customer Fees' },
-      { feeType: 'Bank Account Fees' },
-      { feeType: 'Investment Account Fees' },
-    ]);
-
-    /* 2) dados do pacote + procedures SQL */
-    const pkgData   = await getPackageData(customerAccount[0].cifno);
-    const packageId = pkgData.defaultFeePackageId;
-
-    const stdRows = await getStandardFees(packageId);
-    const excRows = await getExceptionFees(packageId);
-
-    /* 3) aplica SQL nos grupos */
-    const custodyToolTips = applyStandardAmounts(fees, stdRows);
-    applyExceptionAmounts(fees, excRows, custodyToolTips);
-    fillCustodyCurrentLabels(
-      fees,
-      custodyToolTips,
-      [...stdRows, ...excRows],
-      customerAccount,
-    );
-
-    /* 4) adiciona metadados SQL às contas */
-    customerAccount.forEach((acc) => {
-      Object.assign(acc, pkgData);
-
-      const exc = excRows.find((e) => e.FeeCode === acc.feeCode);
-      if (exc) acc.exceptionAmount = Number(exc.Amount);
-    });
-
-    /* 5) monta retorno */
-    const result = { fees: [] };
-
-    const [customer, bank, investment] = [
-      new CustomerFees(fees, customerAccount),
-      new BankAccountFee(fees, customerAccount),
-      new InvestimentAccountFee(
-        fees,
-        customerAccount,
-        await Field.findOne({ code: 7 }),
-      ),
-    ];
-
-    [customer, bank, investment]
-      .filter((f) => f.fee && f.fee.feeGroups?.length)
-      .forEach((f) => result.fees.push(f.fee));
-
-    const actives = await FeeCase.find({
-      cif       : customerAccount[0].cifno,
-      status    : { $nin: ['DONE', 'REJECTED'] },
-      caseNumber: { $exists: true },
-    });
-    result.feesActives = actives.map(({ caseNumber, id }) => ({ caseNumber, id }));
-
-    const docUrl = getDocumentUrl(packageId);
-    result.accounts = customerAccount.map((acc) => ({
-      cifno              : acc.cifno,
-      ddaNumber          : acc.ddaNumber,
-      branchCity         : acc.branchCity,
-      branchState        : acc.branchState,
-      branchType         : acc.branchType,
-      defaultPackageType : acc.defaultPackageType,
-      feePackage         : acc.feePackage,
-      defaultFeePackageId: acc.defaultFeePackageId,
-      defaultFeePackage  : acc.defaultFeePackage,
-      documentUrl        : docUrl,
-      feeAmount          : acc.feeAmount,
-      exceptionAmount    : acc.exceptionAmount ?? null,
-    }));
-    result.documentUrl = docUrl;
-
-    syncExceptionLabels(result.fees);
-
-    return Result.ok(result);
-  }
-}
